--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "leptos_animated_for"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 
 [dependencies]
 futures = "0.3.28"
 leptos = { version = "0.5.2" }
 wasm-bindgen = { version = "0.2.87" }
-web-sys = { version = "0.3.64", features = ["DomRect", "HtmlElement"] }
+web-sys = { version = "0.3.64", features = ["DomRect"] }
 
 [lints.rust]
 unsafe_code = "forbid"
