--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,13 @@ leptos = { version = "0.5.2" }
 wasm-bindgen = { version = "0.2.87" }
 web-sys = { version = "0.3.64", features = ["DomRect"] }
 
+[features]
+ssr = []
+hydrate = []
+
+[package.metadata.cargo-all-features]
+skip_feature_sets = [["ssr", "hydrate"]]
+
 [lints.rust]
 unsafe_code = "forbid"
 
