--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ description = "`<AnimatedFor />` component utilizing FLIP position transitions f
 keywords = ["leptos", "animations", "dom", "web", "wasm"]
 
 [dependencies]
+cfg-if = "1.0.0"
 futures = "0.3.28"
 leptos = { version = "0.5.2" }
 wasm-bindgen = { version = "0.2.87" }
