--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "leptos_animated_for"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2021"
 repository = "https://github.com/brofrain/leptos-animated-for"
 license = "MIT"
-description = "`<AnimatedFor />` component utilizing FLIP position transitions for Leptos"
+description = "<AnimatedFor /> component utilizing FLIP position transitions for Leptos"
 keywords = ["leptos", "animations", "dom", "web", "wasm"]
 
 [dependencies]
