--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "leptos_animated_for"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 repository = "https://github.com/brofrain/leptos-animated-for"
 license = "MIT"
@@ -9,10 +9,10 @@ keywords = ["leptos", "animations", "dom", "web", "wasm"]
 
 [dependencies]
 cfg-if = "1.0.0"
-futures = "0.3.29"
-leptos = { version = "0.5.4" }
-wasm-bindgen = { version = "0.2.89" }
-web-sys = { version = "0.3.66", features = ["DomRect"] }
+futures = "0.3.30"
+leptos = { version = "0.6.0-beta" }
+wasm-bindgen = { version = "0.2.90" }
+web-sys = { version = "0.3.67", features = ["DomRect"] }
 
 [features]
 ssr = []
