--- a/examples/ssr/.vscode/settings.json
+++ b/examples/ssr/.vscode/settings.json
@@ -4,5 +4,5 @@
   "rust-analyzer.procMacro.ignored": {
     "leptos_macro": ["component"]
   },
-  "rust-analyzer.rustfmt.overrideCommand": ["just", "_vscode-fmt"]
+  "rust-analyzer.rustfmt.overrideCommand": ["leptosfmt", "--stdin", "--rustfmt"]
 }
