--- a/examples/csr/.vscode/settings.json
+++ b/examples/csr/.vscode/settings.json
@@ -3,5 +3,5 @@
   "rust-analyzer.procMacro.ignored": {
     "leptos_macro": ["component"]
   },
-  "rust-analyzer.rustfmt.overrideCommand": ["just", "_vscode-fmt"]
+  "rust-analyzer.rustfmt.overrideCommand": ["leptosfmt", "--stdin", "--rustfmt"]
 }
