--- a/examples/csr/Cargo.toml
+++ b/examples/csr/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 
 [dependencies]
 getrandom = { version = "0.2.12", features = ["js"], optional = true }
-leptos = { version = "0.6.0-beta", features = ["csr", "nightly"] }
+leptos = { version = "0.6.3", features = ["csr", "nightly"] }
 leptos_animated_for = { path = "../.." }
 rand = "0.8.5"
