--- a/examples/ssr/.vscode/settings.json
+++ b/examples/ssr/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "rust-analyzer.check.command": "clippy",
-  "rust-analyzer.cargo.features": ["hydrate"],
+  "rust-analyzer.cargo.features": ["ssr"],
   "rust-analyzer.procMacro.ignored": {
     "leptos_macro": ["component"]
   },
