--- a/examples/ssr/Cargo.toml
+++ b/examples/ssr/Cargo.toml
@@ -11,15 +11,18 @@ axum = { version = "0.7.4", optional = true }
 console_error_panic_hook = "0.1.7"
 console_log = "1"
 getrandom = { version = "0.2.12", features = ["js"], optional = true }
-leptos = { version = "0.6.0-beta", features = ["nightly"] }
+leptos = { version = "0.6.3", features = ["nightly"] }
 leptos_animated_for = { path = "../.." }
-leptos_meta = { version = "0.6.0-beta", features = ["nightly"] }
-leptos_axum = { version = "0.6.0-beta", optional = true }
-leptos_router = { version = "0.6.0-beta", features = ["nightly"] }
+leptos_meta = { version = "0.6.3", features = ["nightly"] }
+leptos_axum = { version = "0.6.3", optional = true }
+leptos_router = { version = "0.6.3", features = ["nightly"] }
 log = "0.4.20"
 rand = "0.8.5"
 simple_logger = "4.3.3"
-tokio = { version = "1.35.1", optional = true }
+tokio = { version = "1.35.1", optional = true, features = [
+  "rt-multi-thread",
+  "macros",
+] }
 tower = { version = "0.4.13", optional = true }
 tower-http = { version = "0.5.1", features = ["fs"], optional = true }
 wasm-bindgen = "0.2.90"
