feat: remove `ssr` feature flag

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "rust-analyzer.check.command": "clippy",
+  "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
   "rust-analyzer.procMacro.ignored": {
     "leptos_macro": ["component"]
   },
