--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
   "rust-analyzer.check.command": "clippy",
+  "rust-analyzer.check.targets": [
+    "wasm32-unknown-unknown",
+    "x86_64-unknown-linux-gnu"
+  ],
   "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
   "rust-analyzer.diagnostics.enable": false,
-  "rust-analyzer.procMacro.ignored": {
-    "leptos_macro": ["component"]
-  },
   "rust-analyzer.rustfmt.overrideCommand": ["leptosfmt", "--stdin", "--rustfmt"]
 }
